--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     margin: 0px;
     padding: 0px;
     font-family: 'Merriweather', serif;
+    font-style:normal;
 }
 /* banner -header- section */
 header{
@@ -27,27 +28,30 @@ header{
     margin-bottom: 120px;
 }
 .head{
-    
+    width: 259px;
+    height: 40px;
     color: #FFF;
+    justify-content: center;
     text-align: center;
-    font-family: Merriweather;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 32px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
     position: absolute;
-    padding: 177px 531px 383px 530px;
+    padding: 177px 531px 0px 530px;
+    
 }
 .headd{
     color: #FFF;
 text-align: center;
-font-family: Merriweather;
 font-size: 72px;
-font-style: normal;
 font-weight: 900;
 line-height: 95px; 
 padding : 233px 344px 177px 344px;
-position: relative;}
+position: relative;
+width: 632px;
+height: 190px;
+}
 
 
 /* main section -second container*/
@@ -56,13 +60,14 @@ position: relative;}
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 120px;
     margin-bottom: 120px;
     }
 .deals-off{
     
 text-align: center;
    
-font-family: Inter;
+font-family: 'Inter', sans-serif;
 font-size: 88px;
 font-style: normal;
 font-weight: 700;
@@ -73,16 +78,16 @@ color: #F00;
 .para{
 color: #F00;
 text-align: center;
-font-family: Inter;
+font-family: 'Inter', sans-serif;
 font-size: 24px;
-font-style: normal;
+margin-top: 48px;
 font-weight: 500;
-line-height: normal;
+
 }
 .all{
     color: #070211;
 text-align: center;
-font-family: Inter;
+font-family: 'Inter', sans-serif;
 font-size: 48px;
 font-style: normal;
 font-weight: 700;
@@ -92,6 +97,7 @@ line-height: normal;
     width: 802.9px;
     height: 500px;
     display: block;
+    margin-top: 48px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 120px;
@@ -99,18 +105,24 @@ line-height: normal;
 }
 /* third-container */
 
-.third-container{
+.background-image1{
 width: 1320px;
 height: 600px;
+background-position: center;
 background-repeat: no-repeat;
+position: relative;
 background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url(./images/Vectorrr.png),no-repeat;
 display: flex;
 margin-left: auto;
 margin-right: auto;
 margin-bottom: 120px;
-position: center;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+    text-align: left;
+    color: white;
 }
-.welcome-party{
+.title1{
     width: 642px;
     color: #FFF;
     font-family: Merriweather;
@@ -119,19 +131,19 @@ position: center;
     font-weight: 900;
     line-height: 88px;
     letter-spacing: 7.04px;
-    padding: 126px 552px 24px 126px;  
+    padding: 120px 620px 0px 140px; 
 }
-.paraa{
+.text-content1{
     width: 697px;
     color: rgba(255, 255, 255, 0.80);
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 30px; /* 166.667% */
-    padding: 5px 497px 40px 126px;
+    padding: 24px 570px 0px 140px;
     }
-.join{
+.join-button{
 color: rgba(255, 255, 255, 0.80);
 text-align: center;
 font-family: Inter;
@@ -140,15 +152,22 @@ font-style: normal;
 font-weight: 700;
 line-height: normal;
 text-transform: uppercase;
-padding: 8px 1059px 142px 126px;
+padding: 25px 1060px 142px 158px;
+width: 103px;
+height: 24px;
 }
 
-.imge{
-
+.year-image1{
+    background-image: url(./images/Group_70-removebg-preview.png);
     width: 319.83px;
     height: 464.662px;
   margin-left:0px;
-
+  background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 50%;
+    right: 50px;
+    transform: translate(0, -50%);
     }
 /* New-section */
 
@@ -160,6 +179,7 @@ display: block;
 margin-left: auto;
 margin-right: auto;
 margin-bottom: 120px;
+padding: 0px 0px 120px 0px;
 
 }
 .new{
@@ -181,7 +201,7 @@ text-transform: capitalize;
     text-transform: capitalize;
 }
 .center{
-    padding: 100px 386px 214px 385px;
+    padding: 100px 386px 48px 385px;
     text-align: center;
 }
 #btn{
@@ -201,6 +221,10 @@ font-style: normal;
 font-weight: 700;
 line-height: normal;
 text-transform: uppercase;
+margin-left: auto;
+margin-right: auto;
+display: block;
+
 }
 
 /* forth-section */
@@ -208,7 +232,8 @@ text-transform: uppercase;
 .forth-section{
 display:flex;
 width: 1600px;
-height: 735px;
+height: 590px;
+
 margin-left: auto;
 margin-right: auto;
 margin-bottom: 120px;
@@ -222,6 +247,7 @@ justify-content: center;
     font-style: normal;
     font-weight: 500;
     line-height: normal;  
+    
 }
 #soon{
     color: #070211;
@@ -273,6 +299,10 @@ height: 140px;
 flex-shrink: 0;
 margin-left: 118px;
 }
+.best{
+    margin-left: 150px;
+    
+}
 
 /* fifth-section */
 
@@ -322,16 +352,16 @@ margin-bottom: 120px;
 }
 .fifth-section{
 justify-content: center;
-margin-top:20px;
+
  position: relative;
 margin-left: 140px;
 margin-bottom: 120px;
 display: block;
 margin-left: auto;
  margin-right: auto;
-margin-bottom: 120px;
+margin-bottom: 20px;
 width: 1600px;
-height: 900px;
+height: 700px;
 
 }
 .girl{
@@ -553,20 +583,106 @@ margin-top: 48px;
 
 /* Footer section */
 
-
 footer{
     width: 1600px;
 height: 609px;
 flex-shrink: 0;
 background: #070211;
-display: block;
- margin-left: auto;
-margin-right: auto;
+font-size: 24px;
 }
-.social-links{
-   justify-content: center;
-display: flex;
+.last{
+    display: flex;
+    justify-content: space-around;
 }
-.footer{
+.last2{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 24px;
+}
+.container{
     color: white;
+    width: 1140px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    
+    justify-content: space-around;
+}
+.container2{
+    color: white;
+    width: 1140px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
+}
+.footer-content{
+    width: 375px;
+    height: 80px;
+    color: #FFF;
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+line-height: 40px;
+padding: 120px 600px 50px 140px;
+}
+.footer-container2{
+    width: 375px;
+    height: 80px;
+    color: #FFF;
+    font-family: 'Inter', sans-serif;
+font-size: 24px;
+font-weight: 500;
+line-height: 40px;
+margin-right: 880px; 
+}
+.footer-container3{
+    width: 145px;
+    height: 29px;
+    color: #FFF;
+font-family: Inter;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+margin-top: 24px;
+}
+.footerr-content{
+    
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 48px 24px 125px 48px;
+}
+.footerrr-content{
+    width: 205px;
+    height: 40px;
+    color: #FFF;
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+line-height: 40px; /* 166.667% */
+padding: 120px 290px 20px 0px;
+}
+.footerrrr-content{
+    width: 195px;
+    height: 40px;
+    color: #FFF;
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+line-height: 40px; /* 166.667% */
+padding: 0px 290px 50px 0px;
+}
+hr{
+    width: 50%;
+height: 100px;
+background: white;
+}
+#id{
+    background: rgba(255, 255, 255, 0.15);
+    width: 1320px;
+height: 1px;
+    justify-content: center;
+    margin-left: 140px;
 }
